Utworzono za pomocą Colaboratory

--- a/Transformer_Tensorflow_Keras_student_version.ipynb
+++ b/Transformer_Tensorflow_Keras_student_version.ipynb
@@ -125,7 +125,7 @@
         "  # Score the queries against the keys according to the equation\n",
         "  # Use matmul and sqrt (cast d_k to float32)\n",
         "  \n",
-        "  scores = tf.matmul(queries, keys, transpose_b=True) / math.sqrt(cast(d_k, tf.float32))\n",
+        "  scores = tf.matmul(queries, keys, transpose_b=True) / tf.math.sqrt(tf.cast(d_k, tf.float32))\n",
         " \n",
         "  # Apply mask to the attention scores for further use (decoder)\n",
         "  if mask is not None:\n",
@@ -151,7 +151,6 @@
     {
       "cell_type": "code",
       "source": [
-        "#check your solution (expected result (64, 5, 64))\n",
         "input_seq_length = 5  # Maximum length of the input sequence\n",
         "d_k = 6  # Dimensionality of the linearly projected (vector) queries and keys\n",
         "d_v = 4  # Dimensionality of the linearly projected (vector) values\n",
