--- a/Transformer_Tensorflow_Keras_teacher_version.ipynb
+++ b/Transformer_Tensorflow_Keras_teacher_version.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "toc_visible": true,
       "collapsed_sections": [
         "fwNi7-EihZMy"
       ],
@@ -40,29 +39,8 @@
       }
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "##Imports"
-      ],
-      "metadata": {
-        "id": "ddddvkHJG-mB"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Import numpy and tensorflow libraries.\n",
-        "Import softmax from keras.backend."
-      ],
-      "metadata": {
-        "id": "mWc0yslD49ar"
-      }
-    },
-    {
       "cell_type": "code",
       "source": [
-        "#from tensorflow import matmul, math, cast, float32, reshape, shape, transpose\n",
-        "#from tensorflow.keras.layers import Layer, Dense\n",
         "from keras.backend import softmax\n",
         "\n",
         "import numpy as np\n",
@@ -71,187 +49,7 @@
       "metadata": {
         "id": "1FttmxV0BheN"
       },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "#from keras.utils import pad_sequences"
-      ],
-      "metadata": {
-        "id": "dX7-V-SpW-fm"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "##Preparing the data"
-      ],
-      "metadata": {
-        "id": "fwNi7-EihZMy"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "####Task 1\n",
-        "Load the data and display first 10 lines"
-      ],
-      "metadata": {
-        "id": "ejbbcQTP2jRy"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "filename = \"/content/english-german-both.pkl\""
-      ],
-      "metadata": {
-        "id": "9SXtfy57UAGv"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "#Load data\n",
-        "##TODO\n",
-        "clean_dataset = load(open(filename, 'rb'))"
-      ],
-      "metadata": {
-        "id": "0KpLcDqhXSBv"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "#Display 10 rows\n",
-        "##TODO\n",
-        "clean_dataset[:10]"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "DPy2wK5YXUQH",
-        "outputId": "ee3c0344-4424-4505-ef98-d87516640335"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([['i like both', 'ich mag beide'],\n",
-              "       ['she misses him', 'er fehlt ihr'],\n",
-              "       ['i followed him', 'ich folgte ihm'],\n",
-              "       ['its unusual', 'es ist ungewohnlich'],\n",
-              "       ['she sounded mad', 'sie klang wutend'],\n",
-              "       ['this is nothing', 'das ist nichts'],\n",
-              "       ['good evening', 'guten abend'],\n",
-              "       ['we cant escape', 'wir konnen nicht entkommen'],\n",
-              "       ['he is my type', 'er ist mein typ'],\n",
-              "       ['i want my mommy', 'ich will zu meiner mama']], dtype='<U370')"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 32
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "from pickle import load\n",
-        "from numpy.random import shuffle\n",
-        "from keras.preprocessing.text import Tokenizer\n",
-        "#from keras.preprocessing.sequence import pad_sequences\n",
-        "from tensorflow import convert_to_tensor, int64\n",
-        " \n",
-        " \n",
-        "class PrepareDataset:\n",
-        " def __init__(self, **kwargs):\n",
-        "  super(PrepareDataset, self).__init__(**kwargs)\n",
-        "  self.n_sentences = 10000  # Number of sentences to include in the dataset\n",
-        "  self.train_split = 0.9  # Ratio of the training data split\n",
-        " \n",
-        " # Fit a tokenizer\n",
-        " def create_tokenizer(self, dataset):\n",
-        "  tokenizer = Tokenizer()\n",
-        "  tokenizer.fit_on_texts(dataset)\n",
-        "  return tokenizer\n",
-        " \n",
-        " def find_seq_length(self, dataset):\n",
-        "  # find the maximum sequence length in a dataset\n",
-        "  return max(len(seq.split()) for seq in dataset)\n",
-        " \n",
-        " def find_vocab_size(self, tokenizer, dataset):\n",
-        "  # calculating vocabulary size\n",
-        "  tokenizer.fit_on_texts(dataset)\n",
-        "  return len(tokenizer.word_index) + 1\n",
-        " \n",
-        " def __call__(self, filename, **kwargs):\n",
-        " # Load a clean dataset\n",
-        "  clean_dataset = load(open(filename, 'rb'))\n",
-        " \n",
-        " # Reduce dataset size\n",
-        "  dataset = clean_dataset[:self.n_sentences, :]\n",
-        " \n",
-        " # Include start and end of string tokens\n",
-        "  for i in range(dataset[:, 0].size):\n",
-        "    dataset[i, 0] = \"<START> \" + dataset[i, 0] + \" <EOS>\"\n",
-        "    dataset[i, 1] = \"<START> \" + dataset[i, 1] + \" <EOS>\"\n",
-        " \n",
-        " # Random shuffle the dataset\n",
-        "  shuffle(dataset)\n",
-        " \n",
-        " # Split the dataset\n",
-        "  train = dataset[:int(self.n_sentences * self.train_split)]\n",
-        " \n",
-        " # Prepare tokenizer for the encoder input\n",
-        "  enc_tokenizer = self.create_tokenizer(train[:, 0])\n",
-        "  enc_seq_length = self.find_seq_length(train[:, 0])\n",
-        "  enc_vocab_size = self.find_vocab_size(enc_tokenizer, train[:, 0])\n",
-        " \n",
-        " # Encode and pad the input sequences\n",
-        "  trainX = enc_tokenizer.texts_to_sequences(train[:, 0])\n",
-        "  trainX = pad_sequences(trainX, maxlen=enc_seq_length, padding='post')\n",
-        "  trainX = convert_to_tensor(trainX, dtype=int64)\n",
-        " \n",
-        " # Prepare tokenizer for the decoder input\n",
-        "  dec_tokenizer = self.create_tokenizer(train[:, 1])\n",
-        "  dec_seq_length = self.find_seq_length(train[:, 1])\n",
-        "  dec_vocab_size = self.find_vocab_size(dec_tokenizer, train[:, 1])\n",
-        " \n",
-        " # Encode and pad the input sequences\n",
-        "  trainY = dec_tokenizer.texts_to_sequences(train[:, 1])\n",
-        "  trainY = pad_sequences(trainY, maxlen=dec_seq_length, padding='post')\n",
-        "  trainY = convert_to_tensor(trainY, dtype=int64)\n",
-        " \n",
-        "  return trainX, trainY, train, enc_seq_length, dec_seq_length, enc_vocab_size, dec_vocab_size"
-      ],
-      "metadata": {
-        "id": "x557xEs1QPBi"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "dataset = PrepareDataset()\n",
-        "trainX, trainY, train_orig, enc_seq_length, dec_seq_length, enc_vocab_size, dec_vocab_size = dataset('english-german-both.pkl')"
-      ],
-      "metadata": {
-        "id": "wL498BfFaAlx"
-      },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -306,7 +104,7 @@
         "  # Score the queries against the keys according to the equation\n",
         "  # Use matmul and sqrt\n",
         "  \n",
-        "  scores = tf.matmul(queries, keys, transpose_b=True) / math.sqrt(cast(d_k, tf.float32))\n",
+        "  scores = tf.matmul(queries, keys, transpose_b=True) / tf.math.sqrt(tf.cast(d_k, tf.float32))\n",
         " \n",
         "  # Apply mask to the attention scores for further use (decoder)\n",
         "  if mask is not None:\n",
@@ -319,20 +117,19 @@
         "  # Compute the attention by a weighted sum of the value vectors\n",
         "  # Use matmul\n",
         "\n",
-        "  attention = matmul(weights, values)\n",
+        "  attention = tf.matmul(weights, values)\n",
         "\n",
         "  return attention"
       ],
       "metadata": {
         "id": "UvwWb-iQ4rim"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "#check your solution (expected result (64, 5, 64))\n",
         "input_seq_length = 5  # Maximum length of the input sequence\n",
         "d_k = 6  # Dimensionality of the linearly projected (vector) queries and keys\n",
         "d_v = 4  # Dimensionality of the linearly projected (vector) values\n",
@@ -355,9 +152,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "xoitMGrJB1qW",
-        "outputId": "42ac1ef7-ef9a-4934-ec89-a1c6760a1a68"
+        "outputId": "700310fa-f095-41b0-8f63-592ceff564a4"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -439,6 +236,9 @@
         "        return x\n",
         " \n",
         "    def call(self, queries, keys, values, mask=None):\n",
+        "        print(f\"queries.shape: {queries.shape}\")\n",
+        "        print(f\"keys.shape: {keys.shape}\")\n",
+        "        print(f\"values.shape: {values.shape}\")\n",
         "        # Rearrange the queries. keys and values to be able to compute all heads in parallel\n",
         "        q_reshaped = self.reshape_tensor(self.W_q(queries), self.heads, True)\n",
         "        k_reshaped = self.reshape_tensor(self.W_k(keys), self.heads, True)\n",
@@ -468,7 +268,7 @@
       "metadata": {
         "id": "4M4MrHGdB3rS"
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -494,11 +294,11 @@
       "source": [
         "#check your code\n",
         "input_seq_length = 5  # Maximum length of the input sequence\n",
-        "h = 8  # Number of self-attention heads\n",
+        "h = 4  # Number of self-attention heads\n",
         "d_k = 64  # Dimensionality of the linearly projected queries and keys\n",
         "d_v = 64  # Dimensionality of the linearly projected values\n",
-        "d_model = 512  # Dimensionality of the model sub-layers' outputs\n",
-        "batch_size = 64  # Batch size from the training process\n",
+        "d_model = 64  # Dimensionality of the model sub-layers' outputs\n",
+        "batch_size = 32  # Batch size from the training process\n",
         " \n",
         "queries = np.random.random((batch_size, input_seq_length, d_k))\n",
         "keys = np.random.random((batch_size, input_seq_length, d_k))\n",
@@ -513,20 +313,23 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "8yynCQV1CqK_",
-        "outputId": "30c4692f-2d91-4c21-95bd-657f53c789b7"
+        "outputId": "d81490dc-56c6-4603-b399-d266936cf2e0"
       },
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Q reshaped: (64, 8, 5, 8)\n",
-            "K reshaped: (64, 8, 5, 8)\n",
-            "V reshaped: (64, 8, 5, 8)\n",
-            "O reshaped: (64, 8, 5, 8)\n",
-            "Output: (64, 5, 64)\n",
-            "(64, 5, 512)\n"
+            "queries.shape: (32, 5, 64)\n",
+            "keys.shape: (32, 5, 64)\n",
+            "values.shape: (32, 5, 64)\n",
+            "Q reshaped: (32, 4, 5, 16)\n",
+            "K reshaped: (32, 4, 5, 16)\n",
+            "V reshaped: (32, 4, 5, 16)\n",
+            "O reshaped: (32, 4, 5, 16)\n",
+            "Output: (32, 5, 64)\n",
+            "(32, 5, 64)\n"
           ]
         }
       ]
