--- a/Transformer_Tensorflow_Keras_student_version.ipynb
+++ b/Transformer_Tensorflow_Keras_student_version.ipynb
@@ -66,7 +66,9 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "#YOUR CODE"
+      ],
       "metadata": {
         "id": "1FttmxV0BheN"
       },
@@ -127,9 +129,9 @@
         "  \n",
         "  scores = tf.matmul(queries, keys, transpose_b=True) / tf.math.sqrt(tf.cast(d_k, tf.float32))\n",
         " \n",
-        "  # Apply mask to the attention scores for further use (decoder)\n",
-        "  if mask is not None:\n",
-        "    scores += -1e9 * mask\n",
+        "  # For the decoder we need to apply a mask\n",
+        "  #if mask is not None:\n",
+        "  #  scores += -1e9 * mask\n",
         " \n",
         "  # Compute the weights by a softmax operation\n",
         "\n",
@@ -214,6 +216,15 @@
       ],
       "metadata": {
         "id": "NqnGTbeR3NFH"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Take a look at Layer class, especially __init__ and call and create your own Tensorflow layer (https://www.tensorflow.org/api_docs/python/tf/keras/layers/Layer)"
+      ],
+      "metadata": {
+        "id": "bDZHQ95IV2sV"
       }
     },
     {
@@ -411,14 +422,16 @@
         "    def __init__(self, **kwargs):\n",
         "        super(AddNormalization, self).__init__(**kwargs)\n",
         "        #TODO\n",
+        "        #use LayerNormalization() from tf\n",
         "        self.layer_norm = ?  # Layer normalization layer\n",
         " \n",
         "    def call(self, x, sublayer_x):\n",
         "        # Add x and sublayer_x and normalize\n",
         "        #TODO\n",
         "        add = ?\n",
-        "        output = ?\n",
         "        # Apply layer normalization to the sum\n",
+        "        output = ?\n",
+        "        \n",
         "        return output"
       ],
       "metadata": {
@@ -599,8 +612,11 @@
         "class PositionEmbeddingFixedWeights(tf.keras.layers.Layer):\n",
         "    def __init__(self, sequence_length, vocab_size, output_dim, **kwargs):\n",
         "        super(PositionEmbeddingFixedWeights, self).__init__(**kwargs)\n",
+        "\n",
         "        word_embedding_matrix = self.get_position_encoding(vocab_size, output_dim)   \n",
-        "        position_embedding_matrix = self.get_position_encoding(sequence_length, output_dim)                                          \n",
+        "        position_embedding_matrix = self.get_position_encoding(sequence_length, output_dim)\n",
+        "        \n",
+        "        #https://www.tensorflow.org/api_docs/python/tf/keras/layers/Embedding                         \n",
         "        self.word_embedding_layer = tf.keras.layers.Embedding(input_dim=vocab_size, output_dim=output_dim, weights=[word_embedding_matrix], trainable=False)\n",
         "        self.position_embedding_layer = tf.keras.layers.Embedding(input_dim=sequence_length, output_dim=output_dim, weights=[position_embedding_matrix], trainable=False)\n",
         "             \n",
