Utworzono za pomocą Colaboratory

--- a/Image_description_student.ipynb
+++ b/Image_description_student.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOGRF6lySV9lFS6gsj8JYfN",
+      "authorship_tag": "ABX9TyPf5i/FekFcBLbAUYRXYVjW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2778,7 +2778,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Install transformers via `pip`"
+        "Install `transformers` via `pip`"
       ],
       "metadata": {
         "id": "o4u6cXU_TEV7"
